--- a/Source/OrderApp/OrderApp/Views/Product/_SearchForm.cshtml
+++ b/Source/OrderApp/OrderApp/Views/Product/_SearchForm.cshtml
@@ -16,6 +16,7 @@
                         </div>
                         <div class="form-group text-right">
                             <button type="button" class="btn btn-primary " id="btnSearch" onclick="btnSearch_onClick()" style="width:100px"> Filter</button> &nbsp;&nbsp;
+                            <button type="button" class="btn btn-secondary " id="btnClear" onclick="btnClear_onClick()" style="width:80px"> Clear</button> &nbsp;&nbsp;
                         </div>
                     </div>
                 </div>
