--- a/Source/OrderApp/OrderApp/Views/Customer/_SearchForm.cshtml
+++ b/Source/OrderApp/OrderApp/Views/Customer/_SearchForm.cshtml
@@ -19,7 +19,8 @@
                             <input type="text" id="City-search" class="form-control" style="width:180px" />
                         </div>
                         <div class="form-group text-right">
-                            <button type="button" class="btn btn-primary " id="btnSearch" onclick="btnSearch_onClick()" style="width:100px"> Filter</button> &nbsp;&nbsp;
+                            <button type="button" class="btn btn-primary " id="btnSearch" onclick="btnSearch_onClick()" style="width:80px"> Filter</button> &nbsp;&nbsp;
+                            <button type="button" class="btn btn-secondary " id="btnClear" onclick="btnClear_onClick()" style="width:80px"> Clear</button> &nbsp;&nbsp;
                         </div>
                     </div>
                 </div>
