edit and detail order list

--- a/Source/OrderApp/OrderApp/Views/Customer/_SearchForm.cshtml
+++ b/Source/OrderApp/OrderApp/Views/Customer/_SearchForm.cshtml
@@ -21,6 +21,7 @@
                         <div class="form-group text-right">
                             <button type="button" class="btn btn-primary " id="btnSearch" onclick="btnSearch_onClick()" style="width:80px"> Filter</button> &nbsp;&nbsp;
                             <button type="button" class="btn btn-secondary " id="btnClear" onclick="btnClear_onClick()" style="width:80px"> Clear</button> &nbsp;&nbsp;
+                            <button type="button" class="btn btn-primary " id="btnNew" onclick="btnAdd_onClick()" style="width:100px"> Add Customer</button>
                         </div>
                     </div>
                 </div>
@@ -30,7 +31,7 @@
                     </div>
                     <div class="col-2 text-right">
                         <div class="form-group">
-                            <button type="button" class="btn btn-primary " id="btnNew" onclick="btnAdd_onClick()" style="width:100px"> Add Order</button>
+                            @*<button type="button" class="btn btn-primary " id="btnNew" onclick="btnAdd_onClick()" style="width:100px"> Add Order</button>*@
                         </div>
                     </div>
                 </div>
