--- a/Source/OrderApp/OrderApp/Views/OrderList/_OrderEntry.cshtml
+++ b/Source/OrderApp/OrderApp/Views/OrderList/_OrderEntry.cshtml
@@ -7,8 +7,12 @@
 
 <link href="~/Content/bootstrap 4.5.3/css/bootstrap.min.css" rel="stylesheet" />
 <script src="~/Scripts/jquery-3.5.1/jquery-3.5.1.min.js"></script>
+@*<script src="~/Scripts/jquery-3.6.0/jquery-3.6.0.min.js"></script>*@
+<script src="~/Scripts/jquery-ui.js"></script>
 <script src="~/Content/bootstrap 4.5.3/js/bootstrap.bundle.js"></script>
 <script src="~/Content/bootstrap 4.5.3/js/bootstrap.min.js"></script>
+
+<script src="~/Content/bootstrap 4.5.3/js/bootstrap-datepicker.min.js"></script>
 <link href="~/Content/bootstrap 4.5.3/css/font-awesome.min.css" rel="stylesheet" />
 <script src="~/Scripts/popper.min.js"></script>
 
@@ -42,6 +46,15 @@
                                 <div class="form-group">
                                     <label class="col-md-4"> Order Date</label>
                                     <input type="date" id="ordOrderdate" class="form-control" style="width:180px" />
+                                    @*<div class="form-group">
+                                            <div class="input-group date" data-provide="datepicker">
+                                                <input type="text" class="form-control">
+                                                <div class="input-group-addon">
+                                                    <span class="glyphicon glyphicon-th"></span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <p>Date: <input type="text" id="datepicker"></p>*@
                                 </div>
                                 <div class="form-group">
                                     <label class="col-md-4"> Required Date</label>
@@ -51,13 +64,14 @@
                                     <label class="col-md-4"> Ship Name</label>
                                     <input type="text" id="ordShipname" class="form-control" style="width:180px" />
                                 </div>
+
                             </div>
 
                             <div class="col-md-6">
 
                                 <div class="form-group">
                                     <label class="col-md-4"> Customer Id</label>
-                                    @*<input type="text" id="ordOrderId" class="form-control" style="width:180px" />*@
+                                    @*<input type="text" id="ordCustomerId-dtl" class="form-control" style="width:180px" readonly/>*@
                                     <select class="form-control chosen-select" id="ordCustomerId" onchange="getCustomer()" style="width:180px">
                                         <option value=""></option>
                                     </select>
@@ -107,6 +121,26 @@
                                             <td colspan="5">No Item Order
                                             </td>
                                         </tr>*@
+                                    @*<tr>
+                                            <td>
+                                                <select class="form-control chosen-select" id="ordProducId0" onchange="GetProduct0()">
+                                                    <option value=""></option>
+
+                                                </select>
+                                            </td>
+                                            <td>
+                                                <input type="text" id="ordProducName0" class="form-control " disabled="">
+                                            </td>
+                                            <td>
+                                                <input type="text" id="ordUnitPrice0" class="form-control " disabled="">
+                                            </td>
+                                            <td>
+                                                <input type="text" id="ordQty0" class="form-control" onchange="onCalculatePrice(0)">
+                                            </td>
+                                            <td>
+                                                <input type="text" id="ordSubtotal0" class="form-control">
+                                            </td>
+                                        </tr>*@
                                 </tbody>
                             </table>
                         </div>
@@ -118,7 +152,7 @@
                             </div>
                             <div class="col-md-6 text-right">
                                 <label class="col-md-7">Total Price</label>
-                                <input id="ordTotalPrice" class="form-control" style="width:150px;" />
+                                <input id="ordTotalPrice" class="form-control" style="width:150px; text-align:right" />
                             </div>
                         </div>
                     </div>
@@ -146,17 +180,18 @@
         </div>
     </div>
 </div>
+
 <script type="text/javascript">
     var seq = 0;
     var dataProduct = [];
     var optionProduct = "";
     var optionCustomer = "";
     $(document).ready(function () {
-
-        getDataProduct();
-       // getDataCustomer();
-
+       
+       getDataProduct();
+        
     });
+
     //function getDataCustomer() {
     //    $.ajax({
     //        url: "/OrderList/GetAllCustomer",
@@ -180,6 +215,7 @@
     function getDataProduct() {
         var productId = '';
         var productName = '';
+
         return $.ajax({
             url: "/api/products/productall?productid=" + productId + "&productname=" + productName,
             type: "GET",
@@ -197,22 +233,31 @@
             }
         });
     }
-
+    function optionProduct2() {
+         for (var i = 0; i < dataProduct.length; i++) {
+            $('#ordProducId' + i).append(optionProduct);
+        }
+    }
     function OnAddItem_click() {
-       // $('#tblOrderProduct ').children('tbody').children('tr').val('text').remove()
-        var formBodyTable = '<tr>'+
+
+        // $('#tblOrderProduct ').children('tbody').children('tr').val('text').remove()
+        var formBodyTable = '<tr>' +
             /*'<td > <input type="text" id="ordProducId'+seq+'" class="form-control"/></td>'+*/
-                                '<td><select class="form-control chosen-select" id="ordProducId' + seq +
-                                     '" onchange="GetProduct(' + seq + ')">' +
-                                    '<option value=""></option>' +
-                                     '</select></td>'+
-                                '<td> <input type="text" id="ordProducName' + seq + '" class="form-control " disabled  /></td>' +
-                                '<td> <input type="text" id="ordUnitPrice' + seq + '" class="form-control " disabled/></td>' +
-                                '<td> <input type="text" id="ordQty' + seq + '" class="form-control"  onchange="onCalculatePrice('+seq+')"/></td>' +
-                                '<td> <input type="text" id="ordSubtotal' + seq + '" class="form-control" /></td>' +
-                            '</tr>';
+            '<td><select class="form-control chosen-select optionProduct" id="ordProducId' + seq +
+            '" onchange="GetProduct(' + seq + ')">' +
+           '<option value=""></option>' +
+            '</select></td>' +
+            '<td> <input type="text" id="ordProducName' + seq + '" class="form-control " disabled  /></td>' +
+            '<td> <input type="text" id="ordUnitPrice' + seq + '" class="form-control " disabled/></td>' +
+            '<td> <input type="text" id="ordQty' + seq + '" class="form-control"  onchange="onCalculatePrice(' + seq + ')" /></td>' +
+            '<td> <input type="text" id="ordSubtotal' + seq + '" class="form-control" disabled /></td>' +
+            '</tr>';
         $('#tblOrderProduct tbody').append(formBodyTable);
-        for (var i = 0; i < dataProduct.length; i++) {
+        
+
+        for (var i = seq; i < dataProduct.length; i++) {
+            //$('#ordProducId' + i).find('option').remove().end()
+            //$('#ordProducId' + i).append('<option value=""></option>');
             $('#ordProducId' + i).append(optionProduct);
         }
         seq++;
@@ -226,6 +271,18 @@
             success: function (data) {
                 $('#ordProducName' + seq).val(data[0].ProductName);
                 $('#ordUnitPrice' + seq).val(data[0].Price);
+            }
+        });
+    }
+    function GetProduct0() {
+        var productId = $('#ordProducId0').val();
+        return $.ajax({
+            url: "/api/products/productbyid?productid=" + productId,
+            type: "GET",
+            dataType: "Json",
+            success: function (data) {
+                $('#ordProducName0').val(data[0].ProductName);
+                $('#ordUnitPrice0').val(data[0].Price);
             }
         });
     }
@@ -255,7 +312,7 @@
         for (var i = 0; i < jmlDataTable; i++) {
             var price1 = parseInt($('#ordUnitPrice' + i).val());
             var qty1 = parseInt($('#ordQty' + i).val());
-            var total = price1* qty1;
+            var total = price1 * qty1;
             ordTotalPrice = ordTotalPrice + total;
             $('#ordTotalPrice').val(ordTotalPrice);
         }
@@ -264,7 +321,10 @@
     }
 
     function OnSave_click(action) {
-        validate();
+        
+        if (!validate()) {
+            return false;
+        }
         var params = new Object();
         var data = new Object();
         data.Action = action;
@@ -284,7 +344,7 @@
         var jmlDataTable = $('#tblOrderProduct ').children('tbody').children('tr').length;
         for (var i = 0; i < jmlDataTable; i++) {
             var obj = new Object();
-            obj.ProductId = $('#ordProducId'+i).val();
+            obj.ProductId = $('#ordProducId' + i).val();
             obj.ProductName = $('#ordProducName' + i).val();
             obj.Price = $('#ordUnitPrice' + i).val();
             obj.Qty = $('#ordQty' + i).val();
@@ -305,7 +365,7 @@
                     $("#ModalOrderEntry").modal('hide');
                 }
                 else {
-                    alert('Error : ' +result);
+                    alert('Error : ' + result);
                 }
 
 
@@ -315,7 +375,7 @@
     }
     function validate() {
         var msg = "";
-        if ($('#ordCustomerId').val() == '' || $('#ordCustomerId').val() ==null) {
+        if ($('#ordCustomerId').val() == '' || $('#ordCustomerId').val() == null) {
 
             msg += "\n - Customer Id tidak boleh kosong";
         }
@@ -328,7 +388,7 @@
             var productId = $('#ordProducId' + i).val();
             var qty = $('#ordQty' + i).val();
 
-            if (productId == '' || productId==null) {
+            if (productId == '' || productId == null) {
                 msg += "\n - Product Id tidak boleh kosong";
             }
             if (qty == '' || qty == null) {
@@ -355,7 +415,7 @@
         else {
             alert('Data not found');
         }
-
+        $('#ordTotalPrice').val('');
     }
 </script>
 
