--- a/Source/OrderApp/OrderApp/Views/OrderList/Index.cshtml
+++ b/Source/OrderApp/OrderApp/Views/OrderList/Index.cshtml
@@ -1,9 +1,10 @@
 ﻿<link href="~/Content/bootstrap 4.5.3/css/bootstrap.min.css" rel="stylesheet" />
 <script src="~/Scripts/jquery-3.5.1/jquery-3.5.1.min.js"></script>
+@*<script src="~/Scripts/jquery-3.6.0/jquery-3.6.0.min.js"></script>*@
 <script src="~/Content/bootstrap 4.5.3/js/bootstrap.bundle.js"></script>
 <script src="~/Content/bootstrap 4.5.3/js/bootstrap.min.js"></script>
-<link href="~/Content/bootstrap 4.5.3/css/font-awesome.min.css" rel="stylesheet" />
-<script src="~/Scripts/popper.min.js"></script>
+<script src="~/Scripts/jquery-ui.js"></script>
+@*<script src="~/Content/bootstrap 4.5.3/js/bootstrap-datepicker.min.js"></script>*@
 @Html.Partial("_SearchForm")
 @Html.Partial("_Modal")
 @Html.Partial("_OrderEntry")
@@ -12,6 +13,8 @@
 </div>
 <script type="text/javascript">
     $(document).ready(function () {
+
+        //$('#datepicker').datepicker();
         getDataCustomer();
         SearchCriteria(1, 10);
     });
@@ -115,11 +118,13 @@
             success: function (data) {
                 for (var i = 0; i < data.length; i++) {
                     optionCustomer += '<option value=' + data[i].CustomerId + '>' + data[i].CustomerId + '</option>';
-                    
+
                 }
+              
+                $('#ModalOrderEntry #ordCustomerId').show();
                 $('#ModalOrderEntry #ordCustomerId').append(optionCustomer);
             },
-            
+
         });
 
 
@@ -133,30 +138,34 @@
 
         return $.ajax({
             url: "/OrderList/GetOrderHeaderById",
-            type: "POST",
+            type: "GET",
             data: { orderid: orderid },
             success: function (data) {
-                $('#ModalOrderEntry #txtOrderId').val(data[0].OrderId);
-                $('#ModalOrderEntry #txtOrderdate').val(data[0].OrderDate);
-
-                $('#ModalOrderEntry #txtrequireddate').val(data[0].RequiredDate);
-                $('#ModalOrderEntry #txtShipname').val(data[0].ShipName);
-                $('#ModalOrderEntry #txtCustomerId').val(data[0].CustomerId);
-                $('#ModalOrderEntry #txtTotalPrice').val(data[0].TotalPrice);
+                $('#ModalOrderEntry #ordOrderId').val(data[0].OrderId);
+                $('#ModalOrderEntry #ordOrderdate').val(data[0].OrderDate);
+                
+                $('#ModalOrderEntry #ordrequireddate').val(data[0].RequiredDate);
+                $('#ModalOrderEntry #ordShipname').val(data[0].ShipName);
+                $('#ModalOrderEntry #ordCustomerId').val(data[0].CustomerId);
+                $('#ModalOrderEntry #ordTotalPrice').val(data[0].TotalPrice);
                 $('#btnAddItem').hide();
                 $('#btnADeleteItem').hide();
                 $('#btnsaveOrderAdd').hide();
                 $('#btnsaveOrderUpdate').hide();
 
                 $.ajax({
-                    url: "/OrderList/GetCustomerById",
-                    type: "POST",
-                    data: { CustomerId: data[0].CustomerId },
+                    //url: "/OrderList/GetCustomerById",
+                    url: "/api/Customers/Customerbyid?Customerid=" + data[0].CustomerId,
+                    type: "GET",
+                    //data: { CustomerId: data[0].CustomerId },
                     success: function (data1) {
-                        $('#ModalOrderEntry #txtCustomerId').val(data1[0].CustomerId);
-                        $('#ModalOrderEntry #txtCompanyName').val(data1[0].CustomerName);
-                        $('#ModalOrderEntry #txtAddress').val(data1[0].Address);
-                        $('#ModalOrderEntry #txtCity').val(data1[0].City);
+                        var optionCustomer = '<option value="' + data1[0].CustomerId + '"selected>' + data1[0].CustomerId + '</option>';
+                        $('#ModalOrderEntry #ordCustomerId').append(optionCustomer);
+                        $('#ModalOrderEntry #ordCustomerId').attr('disabled', true)
+                       // $('#ModalOrderEntry #ordCustomerId').val(data1[0].CustomerId);
+                        $('#ModalOrderEntry #ordCompanyName').val(data1[0].CustomerName);
+                        $('#ModalOrderEntry #ordAddress').val(data1[0].Address);
+                        $('#ModalOrderEntry #ordCity').val(data1[0].City);
 
 
                     }
@@ -164,7 +173,7 @@
 
                 $.ajax({
                     url: "/OrderList/GetOrderDetailById",
-                    type: "POST",
+                    type: "GET",
                     data: { orderid: orderid },
                     success: function (data2) {
                         var formBodyTable = ''
@@ -173,7 +182,7 @@
                                 '<td > <input type="text" id="txtProducId' + i + '" class="form-control" readonly value="' + data2[i].ProductId + '"/></td>' +
                                 //'<td><select class="form-control chosen-select" id="txtProducId' + i +
                                 //'" onchange="GetProduct(' + i + ')">' +
-                                //'<option value=""></option>' +
+                                
                                 //'</select></td>' +
                                 '<td> <input type="text" id="txtProducName' + i + '" class="form-control " readonly  value="' + data2[i].ProductName + '"/></td>' +
                                 '<td> <input type="text" id="txtUnitPrice' + i + '" class="form-control " readonly value="' + data2[i].Price + '"/></td>' +
@@ -195,47 +204,33 @@
     }
     function getUpdatePopUp(orderid) {
 
-        //var optionProduct = "";
-        //var optionCustomer = "";
-        //return $.ajax({
-        //    url: "/OrderList/GetAllProduct",
-        //    type: "POST",
-        //    data: {},
-        //    success: function (data) {
-        //        for (var i = 0; i < data.length; i++) {
-        //            var obj = new Object();
-        //            obj.ProductId = data[i].ProductId;
-        //            obj.ProductName = data[i].ProductName;
-        //            obj.Price = data[i].Price;
-        //            dataProduct.push(obj);
-        //            optionProduct += '<option value=' + dataProduct[i].ProductId + '>' + dataProduct[i].ProductName + '</option>';
-        //        }
-
-        //    }
-        //});
         return $.ajax({
             url: "/OrderList/GetOrderHeaderById",
-            type: "POST",
+            type: "GET",
             data: { orderid: orderid },
             success: function (data) {
-                $('#ModalOrderEntry #txtOrderId').val(data[0].OrderId);
-                $('#ModalOrderEntry #txtOrderdate').val(data[0].OrderDate);
+                $('#ModalOrderEntry #ordOrderId').val(data[0].OrderId);
+                $('#ModalOrderEntry #ordOrderdate').val(data[0].OrderDate);
 
-                $('#ModalOrderEntry #txtrequireddate').val(data[0].RequiredDate);
-                $('#ModalOrderEntry #txtShipname').val(data[0].ShipName);
-                $('#ModalOrderEntry #txtCustomerId').val(data[0].CustomerId);
-                $('#ModalOrderEntry #txtTotalPrice').val(data[0].TotalPrice);
+                $('#ModalOrderEntry #ordrequireddate').val(data[0].RequiredDate);
+                $('#ModalOrderEntry #ordShipname').val(data[0].ShipName);
+                $('#ModalOrderEntry #ordCustomerId').val(data[0].CustomerId);
+                $('#ModalOrderEntry #ordTotalPrice').val(data[0].TotalPrice);
 
 
                 $.ajax({
-                    url: "/OrderList/GetCustomerById",
-                    type: "POST",
-                    data: { CustomerId: data[0].CustomerId },
+                    url: "/api/Customers/Customerbyid?Customerid=" + data[0].CustomerId,
+                    type: "GET",
+                    //data: { CustomerId: data[0].CustomerId },
                     success: function (data1) {
-                        $('#ModalOrderEntry #txtCustomerId').val(data1[0].CustomerId);
-                        $('#ModalOrderEntry #txtCompanyName').val(data1[0].CustomerName);
-                        $('#ModalOrderEntry #txtAddress').val(data1[0].Address);
-                        $('#ModalOrderEntry #txtCity').val(data1[0].City);
+
+                       
+                        var optionCustomer = '<option value="' + data1[0].CustomerId + '"selected>' + data1[0].CustomerId+'</option>';
+                        $('#ModalOrderEntry #ordCustomerId').append(optionCustomer);
+                        $('#ModalOrderEntry #ordCustomerId').attr('disabled', true)
+                        $('#ModalOrderEntry #ordCompanyName').val(data1[0].CustomerName);
+                        $('#ModalOrderEntry #ordAddress').val(data1[0].Address);
+                        $('#ModalOrderEntry #ordCity').val(data1[0].City);
 
 
                     }
@@ -249,25 +244,26 @@
                         var formBodyTable = ''
                         for (var i = 0; i < data2.length; i++) {
                             formBodyTable += '<tr>' +
-                                //'<td > <input type="text" id="txtProducId' + i + '" class="form-control" readonly value="' + data2[i].ProductId + '"/></td>' +
-                                '<td><select class="form-control chosen-select" id="txtProducId' + i +
+                                //'<td > <input type="text" id="ordProducId' + i + '" class="form-control" readonly value="' + data2[i].ProductId + '"/></td>' +
+                                '<td><select class="form-control chosen-select" id="ordProducId' + i +
                                 '" onchange="GetProduct(' + i + ')">' +
-                                '<option value="seletected" seletected></option>' +
+                                //'<option value=""></option>'+
+                                '<option value="' + data2[i].ProductId + '" selected> ' + data2[i].ProductId + '</option>' +
                                 '</select></td>' +
-                                '<td> <input type="text" id="txtProducName' + i + '" class="form-control " readonly  value="' + data2[i].ProductName + '"/></td>' +
-                                '<td> <input type="text" id="txtUnitPrice' + i + '" class="form-control " readonly value="' + data2[i].Price + '"/></td>' +
-                                '<td> <input type="text" id="txtQty' + i + '" class="form-control"  onchange="onCalculatePrice(' + i + ')" value="' + data2[i].Qty + '"/></td>' +
-                                '<td> <input type="text" id="txtSubtotal' + i + '" class="form-control" readonly value="' + data2[i].SubTotal + '"/></td>' +
+                                '<td> <input type="text" id="ordProducName' + i + '" class="form-control " readonly  value="' + data2[i].ProductName + '"/></td>' +
+                                '<td> <input type="text" id="ordUnitPrice' + i + '" class="form-control " readonly value="' + data2[i].Price + '"/></td>' +
+                                '<td> <input type="text" id="ordQty' + i + '" class="form-control"  onchange="onCalculatePrice(' + i + ')" value="' + data2[i].Qty + '"/></td>' +
+                                '<td> <input type="text" id="ordSubtotal' + i + '" class="form-control" readonly value="' + data2[i].SubTotal + '"/></td>' +
                                 '</tr>';
                         }
 
                         $('#tblOrderProduct tbody').append(formBodyTable);
                         for (var i = 0; i < dataProduct.length; i++) {
-                            $('#txtProducId' + i).append(optionProduct);
+                            $('#ordProducId' + i).append(optionProduct);
                         }
                     }
                 });
-                $('#ModalOrderEntry #txtOrderId').prop('readonly', true);
+                $('#ModalOrderEntry #ordOrderId').prop('readonly', true);
                 // $('#ModalOrderEntry #txtCustomerId').prop('readonly', true);
                 $('#ModalOrderEntry').modal();
                 $('#btnsaveOrderAdd').hide();
@@ -279,15 +275,17 @@
     }
     function OnBack_click() {
 
-        $('#txtOrderId').val('');
-        $('#txtOrderdate').val('');
-        $('#txtrequireddate').val('');
-        $('#txtShipname').val('');
+        $('#ordOrderId').val('');
+        $('#ordOrderdate').val('');
+        $('#ordrequireddate').val('');
+        $('#ordShipname').val('');
 
-        $('#txtCustomerId').val('');
-        $('#txtCompanyName').val('');
-        $('#txtAddress').val('');
-        $('#txtCity').val('');
+        $('#ordCustomerId').val('');
+     
+        $('#ordCompanyName').val('');
+        $('#ordAddress').val('');
+        $('#ordCity').val('');
+        $('#ordTotalPrice').val('');
         $('#tblOrderProduct').children('tbody').children('tr').remove()
         $('#ModalOrderEntry').modal('hide');
     }
