modify generate orderId

--- a/Source/OrderApp/OrderApp/Views/OrderList/Index.cshtml
+++ b/Source/OrderApp/OrderApp/Views/OrderList/Index.cshtml
@@ -286,6 +286,7 @@
         $('#ordAddress').val('');
         $('#ordCity').val('');
         $('#ordTotalPrice').val('');
+        $('#ordCustomerId').attr("disabled", false)
         $('#tblOrderProduct').children('tbody').children('tr').remove()
         $('#ModalOrderEntry').modal('hide');
     }
